--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.2.0",
+		"react-shimmer-effects": "^1.0.4",
 		"tailwindcss": "^4.1.11"
 	},
 	"browserslist": [
